--- a/recipes/git.toml
+++ b/recipes/git.toml
@@ -4,7 +4,7 @@ version = "2.48.1"
 url = "https://www.kernel.org/pub/software/scm/git/git-2.48.1.tar.gz"
 
 ["configure"]
-
+cmd = "make configure && ./configure"
 ["build"]
 
 ["install"]
